Document extended say* API with Diataxis structure
Added comprehensive documentation and integration test for the 9 new say* methods:

1. Updated CLAUDE.md with Diataxis-structured guide:
   - Methods reference table
   - How-to patterns (5 common examples)
   - Explanation section (when to use each method)
   - Reference section (markdown output examples)

2. Created ExtendedSayApiDocTest demonstrating:
   - All 9 methods in realistic usage patterns
   - Integration with existing say* methods
   - Documentation best practices
   - Summary comparison table

Benefits:
- Portable Markdown output (GitHub, GitLab, static sites)
- Version-control friendly (clean text diffs)
- No HTML/CSS/JS dependencies
- Covers documentation beyond HTTP testing

Tests: 301 passing (300 existing + 1 new integration test)

https://claude.ai/code/session_01BSRPv5Lg77bbXFMJBnHz71